# Inventory-Management-System

./: .env.example  .env.prod.example  .gitattributes  .gitignore  Inventory_Procurement_Platform_Blueprint.md  README.md  TESTING_GUIDE.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  PROCUREMENT_MODULE.md  README.md  REORDER_ENGINE.md  docker-compose.yml  examples_procurement.py  examples_reorder.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/advisor/: __init__.py  api.py  providers.py  schemas.py  service.py
backend/app/assembly/: api.py  repository.py  schemas.py  service.py
backend/app/assistant/: __init__.py  alerts.py  api.py  cache.py  providers.py  repository.py  scheduler.py  schemas.py  service.py  whatsapp.py
backend/app/bike_issues/: api.py  repository.py  schemas.py  service.py
backend/app/catalog/: profile.py
backend/app/container/: __init__.py  api.py  repository.py  schemas.py  service.py
backend/app/core/: auth_policy.py  config.py  exceptions.py  feature_flags.py  logging.py  middleware.py  pdf_branding.py  permissions.py  ratelimit.py  security.py  security_headers.py  tokens.py
backend/app/customer_delivery/: api.py  pdf.py  repository.py  schemas.py  service.py
backend/app/dashboard/: api.py  repository.py  schemas.py  service.py
backend/app/db/: base.py  session.py
backend/app/demand/: api.py  repository.py  schemas.py  (+1 more)
backend/docker/: 02_app_role.sql  entrypoint.sh
backend/tests/: conftest.py
(+637 files in other folders)
