[project]
name = "inventory-procurement-backend"
version = "1.0.0"
description = "Inventory Management & Procurement Platform — backend (FastAPI)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses callables in argument defaults (Depends(...))

[tool.ruff.lint.isort]
known-first-party = ["app"]
