[project]
name = "inventory-procurement-backend"
version = "1.0.0"
description = "Inventory Management & Procurement Platform — backend (FastAPI)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI uses callables in argument defaults (Depends(...)).
# E501: line-length is advisory (this codebase is densely written); the bug-catching
# rules (F/B/I/UP) are enforced instead. Re-enable E501 + reformat to burn it down later.
ignore = ["B008", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
